<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".TelaSelecionarModo">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selecionar_modo"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1"
        android:gravity="center_vertical">


        <Button
            android:id="@+id/game_pad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gamepad"
            android:drawableStart="@drawable/icgame_pad" />

        <Button
            android:id="@+id/terminal_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/terminal_mode" />


    </LinearLayout>

    <Button
        android:id="@+id/voltarselecionarMod"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/voltar" />


</LinearLayout>